syntax="proto2";

package raft.proto;

option optimize_for = SPEED;


//	InternalNodeAddRequest


message InternalNodeAddRequest{
	required int32 id = 1;
	required string host = 2;
	required int32 port = 3;
}

//	InternalNodeAddResponse

message InternalNodeAddResponse{
	required IsUpdated isUpdated = 1;
	
	enum IsUpdated{
	
	YES = 0;
	NO = 1;
	
	}
}



message InternalNodeAddPacket{

	 oneof payload{							
		 InternalNodeAddRequest internalNodeAddRequest = 2;
		 InternalNodeAddResponse internalNodeAddResponse = 3;		
	} 


}